fix build changes

--- a/src/app/endpoints/miner-in-house-transactions/page.mdx
+++ b/src/app/endpoints/miner-in-house-transactions/page.mdx
@@ -39,8 +39,7 @@ Monitor transaction frequency to understand miner treasury management intensity 
   </Property>
   <Property name="from" type="string">
     Start time in <code>YYYYMMDDTHHMMSS</code> or <code>YYYYMMDD</code>. For{' '}
-    <code>window=block</code>, specify block height (e.g., <code>510000</code>
-    ).
+    <code>window=block</code>, specify block height (e.g., <code>510000</code>).
   </Property>
   <Property name="to" type="string">
     End time in <code>YYYYMMDDTHHMMSS</code> or <code>YYYYMMDD</code>. For{' '}
