--- a/src/app/endpoints/fees-per-block-mean/page.mdx
+++ b/src/app/endpoints/fees-per-block-mean/page.mdx
@@ -30,15 +30,15 @@ Monitor average fees per block to understand network congestion intensity and pe
 
 <Properties>
   <Property name="window" type="string">
-    Time resolution. Supported values: <code>day</code>, <code>hour</code>,{' '}
+    Time resolution. Supported values: <code>day</code>, <code>hour</code>,
     <code>block</code>.
   </Property>
   <Property name="from" type="string">
-    Start time in <code>YYYYMMDDTHHMMSS</code> or <code>YYYYMMDD</code>. For{' '}
+    Start time in <code>YYYYMMDDTHHMMSS</code> or <code>YYYYMMDD</code>. For
     <code>window=block</code>, specify block height (e.g., <code>510000</code>).
   </Property>
   <Property name="to" type="string">
-    End time in <code>YYYYMMDDTHHMMSS</code> or <code>YYYYMMDD</code>. For{' '}
+    End time in <code>YYYYMMDDTHHMMSS</code> or <code>YYYYMMDD</code>. For
     <code>window=block</code>, specify block height.
   </Property>
   <Property name="limit" type="integer">
