--- a/src/app/endpoints/mvrv-ratio/page.mdx
+++ b/src/app/endpoints/mvrv-ratio/page.mdx
@@ -34,8 +34,7 @@ Monitor MVRV to identify market cycle extremes, overvaluation bubbles, and under
   </Property>
   <Property name="from" type="string">
     Start time in <code>YYYYMMDDTHHMMSS</code> or <code>YYYYMMDD</code>. For{' '}
-    <code>window=block</code>, specify block height (e.g., <code>510000</code>
-    ).
+    <code>window=block</code>, specify block height (e.g., <code>510000</code>).
   </Property>
   <Property name="to" type="string">
     End time in <code>YYYYMMDDTHHMMSS</code> or <code>YYYYMMDD</code>. For{' '}
